--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "hoi4ModUtilities.modFile": "c:\\Users\\nyuhe\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\tsareich\\descriptor.mod"
+    "hoi4ModUtilities.modFile": "c:\\Users\\nyuhe\\Documents\\Paradox Interactive\\Hearts of Iron IV\\mod\\tsareich\\descriptor.mod",
+    "python.analysis.typeCheckingMode": "basic"
 }
